[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/m6x11.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/CreditsScreen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -76.0
margin_right = -16.0
margin_bottom = -60.0
grow_horizontal = 0
focus_neighbour_bottom = NodePath("../OptionsButton")
shortcut_in_tooltip = false
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -52.0
margin_right = -16.0
margin_bottom = -36.0
grow_horizontal = 0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../CreditsButton")
shortcut_in_tooltip = false
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -28.0
margin_right = -16.0
margin_bottom = -13.0
focus_neighbour_top = NodePath("../OptionsButton")
shortcut_in_tooltip = false
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Thalassonauts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]

[node name="CreditsScreen" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
